--- a/style.css
+++ b/style.css
@@ -1,66 +1,237 @@
-*{
+@font-face {
+    font-family: normalFont;
+    src: url("/font/Poppins-Regular.ttf");
+}
+@font-face {
+    font-family: normalBold;
+    src: url("/font/Poppins-Bold.ttf");
+}
+@font-face {
+    font-family: extraBold;
+    src: url("/font/Poppins-ExtraBold.ttf");
+}
+
+*,*::after,*::before{
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-}
-
-h1 {
-  font-weight: 900;
-  font-size: 500; 
-  color: linear-gradient(rgba(
-    255,255,255,0.8),
-rgba(255,255,255,0.3) 
-);
-}
-h2 {
-
-}
-main {
-    min-height: 100vh;
-    background: linear-gradient(to right top,#65dfc9,#6cdbeb);
-    display: flex;   /* Make this flex */
-    align-items: center; /* Align vertical */
-    justify-content: center; /* Align Horizontal */
-}
-.glass {
-    background: white;
-    min-height: 80vh;
-    width: 60%;
-    background: linear-gradient(to right bottom,rgba(
-        255,255,255,0.7), /* 0.7 opacity */
-    rgba(255,255,255,0.3)  /* 0.3 opacity */
-    );
-    border-radius: 2rem; 
-    z-index: 3;
-    backdrop-filter: blur(2rem); /** Make Circle Blur **/
-}
-
-.circle1, .circle2 {
-    
-    background: linear-gradient(to right bottom,rgba(
-        255,255,255,0.8), /* 0.7 opacity */
-    rgba(255,255,255,0.3)  /* 0.3 opacity */
-    );
-    height: 20rem; /** hright and widht should be same to make it circle **/
-    width: 20rem;
-    position: absolute;
-    z-index: 2;
-   border-radius: 50%;
-    
-}
-.circle1 {
-    top:5%;
-    right: 15%;
    
 }
 
-.circle2 {
-    bottom:5%;
-    left: 10%;
+html {
+    font-size: 62.5%;
+    text-transform: uppercase;
 }
-.content {
+
+/* top menu bar styling  START */
+.menu-bar {
+    background-color: teal;
+    /* offset-x | offset-y | blur-radius | spread-radius | color */
+    box-shadow: 2px 2px 20px 10px rgba(3, 3, 3, 0.2);
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
 }
+.logo-title {
+   color: rgb(255, 255, 255);
+   font-weight: bolder;
+   /* offset-x | offset-y | blur-radius | color */
+   text-shadow:  2px 2px 2px rgba(85, 85, 85)  ;
+   font-size: 4rem;
+   font-family: normalFont;
+   
+  
+}
+nav {
+min-height: 10vh;
+max-height: 10vh;
+width: 100%;
+margin: auto;
+display: flex;
+
+align-items: center; /* this work with Flex */
+justify-content: space-between;
+position: fixed;
+box-shadow: 2px 2px 20px 5px rgba(3, 3, 3, 0.2);
+background: black;
+z-index: 1; /** it will make hello back to menu **/
+
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    color: sandybrown;
+    font-family: normalFont;
+    font-size: 2rem;
+   
+}
+
+li {
+    padding: 20px;
+    cursor: pointer;
+}
+.active {
+    color: rgb(255, 255, 255);
+}
+
+.logout {
+
+    border-color: seagreen;
+    background: none;
+    color: sandybrown;
+    font-family: normalBold;
+    font-size: 1.2rem;
+    padding:0.9rem;
+    border-radius: 10px;
+    border: 2px solid sandybrown;
+    cursor: pointer;
+   
+}
+.logout:hover {
+
+    border-color: seagreen;
+    background: sandybrown;
+    color: seagreen;
+    font-family: normalBold;
+    font-size: 1.2rem;
+    padding:0.9rem;
+    border-radius: 10px;
+    border: 2px solid sandybrown;
+    cursor: pointer;
+   
+}
+
+.logout:active {
+
+    border-color: seagreen;
+    background: sandybrown;
+    font-size: 1.2rem;
+    color: seagreen;
+    font-family: normalBold;
+    padding:0.9rem;
+    border-radius: 10px;
+    border: 2px solid sandybrown;
+    cursor: pointer;
+   
+}
+
+.hero-image {
+    width: 100%;
+    height: calc(100% - 20%);
+    object-fit: cover; 
+}
+
+.overlay {
+    position: absolute;
+    color: white;
+    font-size: 500px;
+    font-family: normalFont;
+    width: max-content;
+    height: inherit;
+    top: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100% - 20%);
+    align-items: center;
+    justify-content: center;
+   
+}
+
+@media screen and (min-device-width:320px) and (max-device-width:568px)  {
+ .overlay {
+     display: none;
+ }   
+ .logo-title {
+     font-size: 2rem;
+ }
+ nav {
+     box-sizing: border-box;
+ }
+ ul {
+  
+    display: none;
+ }
+}
+span{
+    animation: overlay 0.05s linear infinite ;
+}
+
+@keyframes overlay{
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+    }
+
+
+    /* card styling start  */
+
+    .card {
+        margin: 1rem;
+        background: linear-gradient(rgba(255, 255, 255, 0.6),rgba(255, 255, 255, 0.267));
+        width: auto;
+        height: 58rem;
+        display: flex;
+        flex-direction: column;
+        border-radius: 1rem;
+        box-shadow:  2px 2px 10px 1px rgba(85, 85, 85, 0.2);
+        align-items: center;
+        transition: ease-out 1s;
+   
+    }
+    .card:hover {
+        margin: 1rem;
+        background: linear-gradient(rgba(255, 255, 255, 0.6),rgba(255, 255, 255, 0.267));
+        width: auto;
+        height: 58rem;
+        display: flex;
+        flex-direction: column;
+        border-radius: 1rem;
+        box-shadow:  2px 2px 100px 1px rgba(85, 85, 85, 0.2);
+         transition: ease-in 1s;
+        align-items: center;
+    }
+
+    .product-buy-now {
+        margin-top: 1rem;
+        border-color: rgb(0, 0, 0);
+        width: 90%;
+        background: rgb(0, 0, 0);
+        color: #ffff;
+        font-family: normalBold;
+        font-size: 1.5rem;
+        padding:0.9rem;
+        border-radius: 10px;
+        border: 2px solid rgb(0, 0, 0);
+        cursor: pointer;
+    }
+
+    .product-name {
+
+        font-family: normalBold;
+        padding-top: 1rem;
+        font-size: 3rem;
+    }
+
+    .product-description {
+        font-family: normalFont;
+        text-transform: capitalize;
+        padding-top: 1rem;
+        font-size: 1.5rem;
+    }
+    .card-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .heading {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    h1 {
+        font-size: 10rem;
+        font-family: normalFont;
+        padding: 10rem  10rem;
+
+    }
