--- a/style.css
+++ b/style.css
@@ -1,237 +1,160 @@
-@font-face {
-    font-family: normalFont;
-    src: url("/font/Poppins-Regular.ttf");
-}
-@font-face {
-    font-family: normalBold;
-    src: url("/font/Poppins-Bold.ttf");
-}
-@font-face {
-    font-family: extraBold;
-    src: url("/font/Poppins-ExtraBold.ttf");
-}
 
-*,*::after,*::before{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
-   
 }
+
 
 html {
     font-size: 62.5%;
     text-transform: uppercase;
 }
 
-/* top menu bar styling  START */
-.menu-bar {
-    background-color: teal;
-    /* offset-x | offset-y | blur-radius | spread-radius | color */
-    box-shadow: 2px 2px 20px 10px rgba(3, 3, 3, 0.2);
-    display: flex;
+body {
+    font-family: regularFont;
 }
-.logo-title {
-   color: rgb(255, 255, 255);
-   font-weight: bolder;
-   /* offset-x | offset-y | blur-radius | color */
-   text-shadow:  2px 2px 2px rgba(85, 85, 85)  ;
-   font-size: 4rem;
-   font-family: normalFont;
-   
-  
+
+@font-face {
+    font-family: regularFont;
+    src: url("./font/Poppins-Regular.ttf");
 }
+@font-face {
+    font-family: boldFont;
+    src: url("./font/Poppins-Bold.ttf");
+}
+@font-face {
+    font-family: extraBoldFont;
+    src: url("./font/Poppins-ExtraBold.ttf");
+}
+@font-face {
+    font-family: mediumFont;
+    src: url("./font/Poppins-Medium.ttf");
+}
+
+
 nav {
-min-height: 10vh;
-max-height: 10vh;
-width: 100%;
-margin: auto;
-display: flex;
+    min-height: 10rem;
+    margin: auto;
+    display: flex;
+    background: #000;
+    color: #fff;
+    /* justify-content: center; */
+    justify-content: space-between;
+    align-items: center;
+    padding: 0rem 1rem;
+}
 
-align-items: center; /* this work with Flex */
-justify-content: space-between;
-position: fixed;
-box-shadow: 2px 2px 20px 5px rgba(3, 3, 3, 0.2);
-background: black;
-z-index: 1; /** it will make hello back to menu **/
-
+.logo-title {
+    font-family: extraBoldFont;
+    font-size: 2rem;
+    color: seagreen;
+    /** offset-x | offset-y | blur-radius  | color **/
+    text-shadow: 0.1px 0.1px 0.8px rgb(255, 255, 255,0.3);
 }
 
 ul {
     list-style-type: none;
     display: flex;
-    color: sandybrown;
-    font-family: normalFont;
-    font-size: 2rem;
-   
+    
 }
 
-li {
-    padding: 20px;
+
+.normal {
+    font-size: 1.5rem;
+    margin:0 2rem 0 2rem;
     cursor: pointer;
+    color: seagreen;
 }
 .active {
-    color: rgb(255, 255, 255);
+    color: white ;
 }
 
 .logout {
-
-    border-color: seagreen;
     background: none;
-    color: sandybrown;
-    font-family: normalBold;
-    font-size: 1.2rem;
-    padding:0.9rem;
+    border: 2px solid seagreen;
+    color: white;
+    padding:1rem;
+    margin-top: -1rem;
     border-radius: 10px;
-    border: 2px solid sandybrown;
-    cursor: pointer;
-   
+
 }
+
 .logout:hover {
-
-    border-color: seagreen;
-    background: sandybrown;
-    color: seagreen;
-    font-family: normalBold;
-    font-size: 1.2rem;
-    padding:0.9rem;
+    background: seagreen;
+    border: 2px solid seagreen;
+    color: white;
+    padding:1rem;
+    margin-top: -1rem;
     border-radius: 10px;
-    border: 2px solid sandybrown;
     cursor: pointer;
-   
 }
 
-.logout:active {
-
-    border-color: seagreen;
-    background: sandybrown;
-    font-size: 1.2rem;
-    color: seagreen;
-    font-family: normalBold;
-    padding:0.9rem;
-    border-radius: 10px;
-    border: 2px solid sandybrown;
-    cursor: pointer;
-   
-}
-
+/* Adding hero styling  */
 .hero-image {
     width: 100%;
-    height: calc(100% - 20%);
-    object-fit: cover; 
+    object-fit: cover;
 }
 
 .overlay {
     position: absolute;
-    color: white;
+    top:10rem;
+    color: seagreen;
+    /* display: flex; */
+    /* justify-content: center; */
     font-size: 500px;
-    font-family: normalFont;
-    width: max-content;
-    height: inherit;
-    top: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100% - 20%);
-    align-items: center;
-    justify-content: center;
-   
-}
-
-@media screen and (min-device-width:320px) and (max-device-width:568px)  {
- .overlay {
-     display: none;
- }   
- .logo-title {
-     font-size: 2rem;
- }
- nav {
-     box-sizing: border-box;
- }
- ul {
-  
-    display: none;
- }
+    height: calc(100%-30%);
+    
 }
 span{
-    animation: overlay 0.05s linear infinite ;
+    animation: overlay 0.1s linear infinite;
 }
 
-@keyframes overlay{
+@keyframes overlay {
     0%{opacity: 0;}
     100%{opacity: 1;}
+}
+
+.heading {
+    text-align: center;
+    font-size: 80px;
+}
+.card-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+}
+.card {
+    margin: 1rem;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 2px 2px 10px 1px rgba(85,85,85,0.2);
+    border-radius: 10px;
+}
+/* .product-name, .product-description{
+    text-align: center;
+} */
+
+.product-buy-now {
+    background: none;
+    border: 2px solid seagreen;
+    color: black;
+    padding:1rem;
+    /* margin-top: -1rem; */
+    border-radius: 10px;
+}
+
+@media screen and (min-device-width:320px) and (max-device-width:1366px) {
+
+    .overlay{
+        display: none;
     }
-
-
-    /* card styling start  */
-
-    .card {
-        margin: 1rem;
-        background: linear-gradient(rgba(255, 255, 255, 0.6),rgba(255, 255, 255, 0.267));
-        width: auto;
-        height: 58rem;
-        display: flex;
-        flex-direction: column;
-        border-radius: 1rem;
-        box-shadow:  2px 2px 10px 1px rgba(85, 85, 85, 0.2);
-        align-items: center;
-        transition: ease-out 1s;
-   
+    .heading{
+        font-size: 20px;
     }
-    .card:hover {
-        margin: 1rem;
-        background: linear-gradient(rgba(255, 255, 255, 0.6),rgba(255, 255, 255, 0.267));
-        width: auto;
-        height: 58rem;
-        display: flex;
-        flex-direction: column;
-        border-radius: 1rem;
-        box-shadow:  2px 2px 100px 1px rgba(85, 85, 85, 0.2);
-         transition: ease-in 1s;
-        align-items: center;
-    }
-
-    .product-buy-now {
-        margin-top: 1rem;
-        border-color: rgb(0, 0, 0);
-        width: 90%;
-        background: rgb(0, 0, 0);
-        color: #ffff;
-        font-family: normalBold;
-        font-size: 1.5rem;
-        padding:0.9rem;
-        border-radius: 10px;
-        border: 2px solid rgb(0, 0, 0);
-        cursor: pointer;
-    }
-
-    .product-name {
-
-        font-family: normalBold;
-        padding-top: 1rem;
-        font-size: 3rem;
-    }
-
-    .product-description {
-        font-family: normalFont;
-        text-transform: capitalize;
-        padding-top: 1rem;
+    .logo-title{
         font-size: 1.5rem;
     }
-    .card-list {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .heading {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    h1 {
-        font-size: 10rem;
-        font-family: normalFont;
-        padding: 10rem  10rem;
-
-    }
+    
+}
